# sphinx-needs-demo

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  broken.patch  pharaoh.toml  prompt.md  pyproject.toml  readme  requirements.txt  upload.sh
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: copilot-instructions.md
.github/agents/: pharaoh.activity-diagram-draft.agent.md  pharaoh.api-coverage-check.agent.md  pharaoh.arch-draft.agent.md  pharaoh.arch-review.agent.md  pharaoh.audit-fanout.agent.md  pharaoh.author.agent.md  pharaoh.block-diagram-draft.agent.md  pharaoh.bootstrap.agent.md  pharaoh.change.agent.md  pharaoh.class-diagram-draft.agent.md  pharaoh.component-diagram-draft.agent.md  pharaoh.context-gather.agent.md  pharaoh.coverage-gap.agent.md  pharaoh.decide.agent.md  pharaoh.decision-record.agent.md  pharaoh.decision-review.agent.md  pharaoh.deployment-diagram-draft.agent.md  pharaoh.diagram-lint.agent.md  pharaoh.diagram-review.agent.md  pharaoh.dispatch-signal-check.agent.md  pharaoh.execute-plan.agent.md  pharaoh.fault-tree-diagram-draft.agent.md  pharaoh.feat-balance.agent.md  pharaoh.feat-component-extract.agent.md  pharaoh.feat-draft-from-docs.agent.md  pharaoh.feat-file-map.agent.md  pharaoh.feat-flow-extract.agent.md  pharaoh.feat-review.agent.md  pharaoh.finding-record.agent.md  pharaoh.flow.agent.md  pharaoh.fmea-review.agent.md  pharaoh.fmea.agent.md  pharaoh.gate-advisor.agent.md  pharaoh.id-allocate.agent.md  pharaoh.id-convention-check.agent.md  pharaoh.lifecycle-check.agent.md  pharaoh.link-completeness-check.agent.md  pharaoh.mece.agent.md  pharaoh.output-validate.agent.md  pharaoh.papyrus-non-empty-check.agent.md  (+41 more)
.github/prompts/: pharaoh.author.prompt.md  pharaoh.change.prompt.md  pharaoh.mece.prompt.md  pharaoh.plan.prompt.md  pharaoh.release.prompt.md  pharaoh.trace.prompt.md  pharaoh.verify.prompt.md  syspilot.change.prompt.md  syspilot.implement.prompt.md  syspilot.mece.prompt.md  syspilot.memory.prompt.md  syspilot.release.prompt.md  syspilot.setup.prompt.md  syspilot.trace.prompt.md  syspilot.verify.prompt.md
.github/workflows/: ci.yaml  ubtrace.yml
.pharaoh/project/: artefact-catalog.yaml  id-conventions.yaml  workflows.yaml
.syspilot/: version.json
.syspilot/templates/: change-document.md
crates/braking-control/: Cargo.toml
crates/cofee-machine/: Cargo.toml
crates/coffee-machine/: Cargo.toml
docs/: Makefile  README.md  SCHEMA_IMPLEMENTATION.md  SCHEMA_VALIDATION.md  analysis.rst  conf.py  demo_details.rst  demo_page_header.rst  index.rst  needs.json  needs_external.json  needs_import.json  online_editor.rst  persons.rst  pharaoh.rst  requirements.rst  schemas.json  specifications.rst  tests.rst  ubproject.toml
docs/_static/: custom.css  custom_ubtrace.css  furo.css  sphinx_needs_common.css  sphinx_needs_dark.css  sphinx_needs_fixes.css  sphinx_needs_modern.css  test_report_template.txt
docs/automotive-adas/: analysis.rst  external_data.rst  index.rst  persons.rst  releases.rst  swe_1_sw_req_analysis.rst  swe_2_sw_arch.rst  swe_3_sw_detailed_design.rst  swe_4_unit_tests.rst  swe_5_sw_integration_tests.rst  swe_6_sw_quali_tests.rst  (+7 more)
scripts/: cargo_test_to_junit.py  postCreateCommand.sh  run_http_server.sh  setup_gitpod.sh
src/: automotive_adas.py  automotive_adas_tests.py  teen_car.py  ubproject.redirect.toml
src/c/: acc.c  (+1 more)
(+79 files in other folders)
