[project]
name = "sphinx-needs-demo"
version = "0.1.0"
description = "Sphinx-needs documentation"
authors = [
    { name = "Daniel Woste", email = "daniel.woste@useblocks.com" }
]
dependencies = [
    "sphinx[test]>=8.2.3",
    "sphinx-needs[plotting]==6.0.1",
    "sphinxcontrib-plantuml>=0.30",
    "sphinx-design>=0.6.1",
    "sphinx-simplepdf>=1.6.0",
    "sphinx-test-reports @ git+https://github.com/useblocks/sphinx-test-reports.git@7a12d1c00ad051f67a5b0cdedb82c25a012eefdd",
    "furo>=2024.8.6",
    "sphinx-preview>=0.1.2",
    "sphinx-immaterial>=0.13.6",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
docs = "sphinx-build -a -E docs docs/_build/html"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/eac"]
