[project]
name = "sphinx-needs-demo"
version = "0.1.0"
description = "Sphinx-needs documentation"
authors = [
    { name = "Daniel Woste", email = "daniel.woste@useblocks.com" }
]
dependencies = [
    "sphinx[test]>=8.2.3",
    "sphinx-needs[plotting]==6.1.0",  # pin as RTD consumes this file, not uv.lock
    "sphinxcontrib-plantuml>=0.30",
    "sphinx-design>=0.6.1",
    "sphinx-simplepdf>=1.6.0",
    "sphinx-test-reports==1.3.1",  # pin as RTD consumes this file, not uv.lock
    "furo>=2024.8.6",
    "sphinx-preview>=0.1.2",
    "sphinx-immaterial>=0.13.6",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/eac"]

[tool.uv]
managed = true
