[project]
name = "sphinx-needs-demo"
version = "0.1.0"
description = "Sphinx-needs documentation"
authors = [
    { name = "Daniel Woste", email = "daniel.woste@useblocks.com" }
]
dependencies = [
    "sphinx[test]>=8.2.3",
    "sphinx-needs[plotting]>=8.0.0,<9",  # pin as RTD consumes this file, not uv.lock
    "sphinx-codelinks>=1.2.0",
    "sphinxcontrib-plantuml>=0.30",
    "sphinx-design>=0.6.1",
    "sphinx-simplepdf>=1.6.0",
    "sphinx-test-reports>=1.3.2",  # pin as RTD consumes this file, not uv.lock
    "furo>=2024.8.6",
    "sphinx-preview>=0.1.2",
    "ubt-sphinx==0.7.1",
]
readme = "README.md"
requires-python = ">= 3.12"

# Optional extra used only when re-rendering the SysML / Gaphor diagrams to
# SVG. Gaphor pulls in PyGObject + pycairo, which need the Cairo / GTK
# girepository system libraries to build, so we keep them out of the doc
# build path. Run:
#
#   uv sync --extra render
#   uv run python docs/automotive-adas/sysml/render_sysml.py
#
# on a developer machine that has those libraries installed, then commit
# the regenerated SVGs.
[project.optional-dependencies]
render = [
    "gaphor>=3.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/eac"]

[tool.uv]
managed = true
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
url = "https://pypi.useblocks.com/"
default = true

[[tool.uv.index]]
url = "https://pypi.org/simple"
